WIP UI fixes, especially cell alignment

--- a/static/fullscreen.less
+++ b/static/fullscreen.less
@@ -141,8 +141,8 @@
 
    div.tile {
       font-size: 25px;
-      line-height: 29px;
-      /* height: (@board-cell-big - 2px); */ /* We inherit 100% from main.less */
+      line-height: 27px;
+      height: (@board-cell-big - 2px);
       width: (@board-cell-big - 2px);
       margin: 0;
       padding-top: 3px;
@@ -175,14 +175,15 @@
    }
    
    div.letterscore {
-      bottom: 3px;
-      right: 2px;
+      bottom: 2px;
+      right: 1.5px;
       font-size: 9px;
       line-height: 9px;
    }
    
    .rack div.letterscore {
       right: 2px;
+      bottom: 2px;
       left: auto;
    }
 
